--- a/cgmanifest.json
+++ b/cgmanifest.json
@@ -5,7 +5,7 @@
 				"Type": "Pod",
 				"Pod": {
 					"Name": "abseil",
-					"Version": "0.20200225.0"
+					"Version": "1.20211102.0"
 				}
 			}
 		},
@@ -23,7 +23,16 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "BoringSSL-GRPC",
-					"Version": "0.0.7"
+					"Version": "0.0.24"
+				}
+			}
+		},
+		{
+			"component": {
+				"type": "Pod",
+				"Pod": {
+					"name": "Libuv-gRPC",
+					"Version": "0.0.10"
 				}
 			}
 		},
@@ -32,7 +41,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseABTesting",
-					"Version": "8.14.0"
+					"Version": "8.15.0"
 				}
 			}
 		},
@@ -41,7 +50,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseAnalytics",
-					"Version": "8.14.0"
+					"Version": "8.15.0"
 				}
 			}
 		},
@@ -50,7 +59,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseAuth",
-					"Version": "8.14.0"
+					"Version": "8.15.0"
 				}
 			}
 		},
@@ -59,7 +68,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseCore",
-					"Version": "8.14.0"
+					"Version": "8.15.0"
 				}
 			}
 		},
@@ -68,7 +77,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseCoreDiagnostics",
-					"Version": "8.14.0"
+					"Version": "8.15.0"
 				}
 			}
 		},
@@ -77,7 +86,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseCrashlytics",
-					"Version": "8.14.0"
+					"Version": "8.15.0"
 				}
 			}
 		},
@@ -86,7 +95,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseDatabase",
-					"Version": "8.14.0"
+					"Version": "8.15.0"
 				}
 			}
 		},
@@ -95,7 +104,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseDynamicLinks",
-					"Version": "8.14.0"
+					"Version": "8.15.0"
 				}
 			}
 		},
@@ -104,7 +113,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseFirestore",
-					"Version": "8.14.0"
+					"Version": "8.15.0"
 				}
 			}
 		},
@@ -113,7 +122,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseFunctions",
-					"Version": "8.14.0"
+					"Version": "8.15.0"
 				}
 			}
 		},
@@ -131,7 +140,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseInstallations",
-					"Version": "8.14.0"
+					"Version": "8.15.0"
 				}
 			}
 		},
@@ -140,7 +149,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseMessaging",
-					"Version": "8.14.0"
+					"Version": "8.15.0"
 				}
 			}
 		},
@@ -149,7 +158,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebasePerformance",
-					"Version": "8.14.0"
+					"Version": "8.15.0"
 				}
 			}
 		},
@@ -158,7 +167,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseRemoteConfig",
-					"Version": "8.14.0"
+					"Version": "8.15.0"
 				}
 			}
 		},
@@ -167,7 +176,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseStorage",
-					"Version": "8.14.0"
+					"Version": "8.15.0"
 				}
 			}
 		},
@@ -203,7 +212,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "GoogleAppMeasurement",
-					"Version": "8.14.0"
+					"Version": "8.15.0"
 				}
 			}
 		},
@@ -257,7 +266,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "Google-Mobile-Ads-SDK",
-					"Version": "9.3.0"
+					"Version": "9.4.0"
 				}
 			}
 		},
@@ -329,7 +338,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "gRPC-C++",
-					"Version": "1.28.2"
+					"Version": "1.44.0"
 				}
 			}
 		},
@@ -338,7 +347,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "gRPC-Core",
-					"Version": "1.28.2"
+					"Version": "1.44.0"
 				}
 			}
 		},
