--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,6 +27,7 @@ jobs:
       cakeTarget: 'ci'
       cakeExtraArgs: '--names=$(SdksNames)'
       windowsImage: ''
+      macosImage: 'macOS-12'
       xcode: '13.3.1'
       cake: '0.33.0'
       initSteps:
