--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,6 +29,7 @@ jobs:
       cakeTarget: 'ci'
       cakeExtraArgs: '--names=$(SdksNames)'
       windowsImage: ''
+      macosImage: 'macOS-12'
       xcode: '14.0.0'
       cake: '0.33.0'
       initSteps:
