--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,7 @@ resources:
       endpoint: xamarin
 
 variables:
+  Codeql.Enabled: true
   DotNetVersion: 6.0.402
   DotNet6Source: https://aka.ms/dotnet6/nuget/index.json
   NuGetOrgSource: https://api.nuget.org/v3/index.json
