--- a/azure-pipelines-compliance.yml
+++ b/azure-pipelines-compliance.yml
@@ -1,8 +1,7 @@
 variables:
-  codeBaseName: 'xamarin_GoogleApisForiOSComponents'
-  areaPath: 'DevDiv\VS Client - Runtime SDKs\[Archived] Components'
-  iterationPath: 'DevDiv\Future Backlog'
   Codeql.Enabled: true
+  Codeql.TSAEnabled: true
+  Codeql.TSAOptionsPath: '.ci/tsaoptions.json'
   CodeQL.Cadence: 0 # Remove this variable when CodeQL is working ok. This is for testing only.
   timeoutInMinutes: 360
   continueOnError: 'true'
@@ -32,10 +31,6 @@ pool:
 steps:
     - checkout: self
 
-    # CodeQL Init
-#     - task: CodeQL3000Init@0
-#       displayName: CodeQL Init
-
     # Component Governance
     - template: security/component-governance/v0.yml@yaml-templates
 
@@ -47,32 +42,3 @@ steps:
 
     # Publish Report
     - template: security/publish-report/v2.yml@yaml-templates
-
-    # CodeQL Finalize
-#     - task: CodeQL3000Finalize@0
-#       displayName: CodeQL Finalize
-
-    # TSA Upload
-#     - task: TSAUpload@1
-#       continueOnError: true
-#       inputs:
-#         tsaVersion: 'TsaV2'
-#         codebase: 'NewOrUpdate'
-#         tsaEnvironment: 'PROD'
-#         codeBaseName: $(codeBaseName)
-#         notifyAlwaysV2: false
-#         instanceUrlForTsaV2: 'DEVDIV'
-#         projectNameDEVDIV: 'DevDiv'
-#         areaPath: $(areaPath)
-#         iterationPath: $(iterationPath)
-#         uploadAPIScan: false
-#         uploadBinSkim: false
-#         uploadCredScan: true
-#         uploadFortifySCA: false
-#         uploadFxCop: false
-#         uploadModernCop: false
-#         uploadPoliCheck: true
-#         uploadPREfast: false
-#         uploadRoslyn: false
-#         uploadTSLint: false
-#         uploadAsync: true
