--- a/azure-pipelines-compliance.yml
+++ b/azure-pipelines-compliance.yml
@@ -1,44 +1,76 @@
-variables:
-  Codeql.Enabled: true
-  Codeql.TSAEnabled: true
-  Codeql.TSAOptionsPath: '.ci/tsaoptions.json'
-  CodeQL.Cadence: 0 # Remove this variable when CodeQL is working ok. This is for testing only.
-  timeoutInMinutes: 360
-  continueOnError: 'true'
-  poolName: 'Azure Pipelines'
-  imageName: 'macOS-latest'
-  verbosity: 'diagnostic'
+trigger:
+  - main
+  - refs/tags/*
 
 resources:
   repositories:
-    - repository: yaml-templates
+    - repository: internal-templates
       type: github
       name: xamarin/yaml-templates
       endpoint: xamarin
       ref: refs/heads/main
+    - repository: components
+      type: github
+      name: xamarin/XamarinComponents
+      endpoint: xamarin
+      ref: refs/heads/issoto-testing-codeql
 
-schedules:
-  - cron: '0 12 * * 0'
-    displayName: 'Weekly Compliance Check'
-    branches:
-      include: [ 'main' ]
-    always: false
+variables:
+  DotNetVersion: 6.0.402
+  DotNet6Source: https://aka.ms/dotnet6/nuget/index.json
+  NuGetOrgSource: https://api.nuget.org/v3/index.json
+  BUILD_COMMIT: $(Build.SourceVersion)
+  BUILD_NUMBER: $(Build.BuildNumber)
 
-pool:
-  name: $(poolName)
-  vmImage: $(imageName)
+jobs:
+  - template: .ci/build.yml@components
+    parameters:
+      enableCodeQLOnMac: true
+      enableCodeQLTSA: true
+      codeQLTSAOptionsPath: '.ci/tsaoptions.json'
+      timeoutInMinutes: 180
+      areaPath: 'DevDiv\VS Client - Runtime SDKs\iOS and Mac\External Bindings'
+      cakeTarget: 'ci'
+      cakeExtraArgs: '--names=$(SdksNames)'
+      windowsImage: ''
+      macosImage: 'macOS-12'
+      xcode: '14.0.0'
+      cake: '0.33.0'
+      initSteps:
+        # CodeQL Init
+        - task: CodeQL3000Init@0
+          displayName: CodeQL Init
+        # Cake v0.33.0 uses this version
+        - task: UseDotNet@2
+          displayName: Install .NET 2.1.818
+          inputs:
+            version: '2.1.818'
+        - task: UseDotNet@2
+          displayName: Install .NET $(DotNetVersion)
+          inputs:
+            version: $(DotNetVersion)
+        - pwsh: |
+            dotnet workload install ios --verbosity diag --from-rollback-file https://maui.blob.core.windows.net/metadata/rollbacks/6.0.4xx.json --source $(Dotnet6Source) --source $(NuGetOrgSource)
+          displayName: Install .NET 6 iOS Workload
+          condition: eq(variables['System.JobName'], 'macos')
+      postBuildSteps:
+        # CodeQL Finalize
+        - task: CodeQL3000Finalize@0
+          displayName: CodeQL Finalize
+        
+  - ${{ if eq(variables['System.TeamProject'], 'devdiv') }}:
+    - template: sign-artifacts/jobs/v2.yml@internal-templates
+      parameters:
+        dependsOn: [ 'build' ]
+        condition: startsWith(variables['Build.SourceBranch'], 'refs/tags/')
 
-steps:
-    - checkout: self
-
-    # Component Governance
-    - template: security/component-governance/v0.yml@yaml-templates
-
-    # CredScan
-    - template: security/credscan/v3.yml@yaml-templates
-
-    # PoliCheck
-    - template: security/policheck/v2.yml@yaml-templates
-
-    # Publish Report
-    - template: security/publish-report/v2.yml@yaml-templates
+    - template: compliance/sbom/job.v1.yml@internal-templates                 # Software Bill of Materials (SBOM): https://eng.ms/docs/cloud-ai-platform/devdiv/one-engineering-system-1es/1es-docs/secure-supply-chain/ado-sbom-generator
+      parameters:
+        packageName: 'Xamarin Google APIs Components for iOS'
+        packageFilter: '*.nupkg'
+        ${{ if not(startsWith(variables['Build.SourceBranch'], 'refs/tags/')) }}:
+          artifactNames: ['nuget']
+          dependsOn: [ 'build' ]
+        ${{ if startsWith(variables['Build.SourceBranch'], 'refs/tags/') }}:
+          artifactNames: ['nuget-signed']
+          dependsOn: [ 'signing' ]
