--- a/.ci/build.yml
+++ b/.ci/build.yml
@@ -1,19 +1,11 @@
-# To take advantage of the windowsImageOverride parameter to target executive order (EO) compliant windows pools such as AzurePipelines-EO, use the build.v1.yml template instead
-# You may also need to update your dependsOn clauses associated with that template from ['build'] to ['macOS','linux','windows'] -- or whatever subset of images you use
-#
 parameters:
   # job parameters
   name: 'build'                                             # the name of the build job for dependency purposes
   displayName: 'Build'                                      # the human name of the job
   timeoutInMinutes: 60                                      # the timeout in minutes
   dependsOn: []                                             # any jobs this job depends on
-  initSteps: []                                             # any steps to run before .NET global tools are installed
-  preBuildSteps: []                                         # any steps that need to run just before the main compilation starts
-  postBuildSteps: []                                        # any steps that need to run just after the main compilation ends
-  postDiffBuildSteps: []                                    # any steps that need to run after the API Diff ends
   masterBranchName: 'main'                                  # the "master" branch that should be used - can be something other than "master"
   installAppleCertificates: 'true'                          # whether or not to install the Apple certificates and provisioning profiles
-  submodules: false                                         # whether or not to check out submodules
   areaPath: ''                                              # the areaPath to log any issues
   runChecks: 'true'
   continueOnError: 'false'
@@ -21,20 +13,13 @@ parameters:
   publishOutputSuffix: ''                                   # the artifact suffix to use when publishing the output folder
   signListPath: 'SignList.xml'                              # the path to the SignList.xml to copy into the nuget artifact for signing
   # job software version parameters
-  linuxAgentPoolName: 'Azure Pipelines'                     # the name of the Linux VM pool
-  macosAgentPoolName: 'Azure Pipelines'                     # the name of the macOS VM pool
-  windowsAgentPoolName: 'Azure Pipelines'                   # the name of the Windows VM pool
-  linuxImage: ''                                            # the name of the Linux VM image (linuxImage: 'Hosted Ubuntu 1604') 
-  macosImage: 'macOS-11'                                    # the name of the macOS VM image
+  macosImage: 'macOS-12'                                    # the name of the macOS VM image
                                                             # 20211121 
                                                             # macOS-latest = macOS-10.15
                                                             # macOS-11 required for XCode 13.1
-  windowsImage: 'windows-latest'                            # the name of the Windows VM image
   mono: 'Latest'                                            # the version of mono to use
-  xcode: '13.2.1'                                             # the version of Xcode to use
-  dotnet: '6.0.300'                                         # the version of .NET Core to use
-  dotnetStable: '6.0.300'                                   # the stable version of .NET Core to use
-  cake: '2.2.0'                                             # the version of Cake to use
+  xcode: '14.0.0'                                           # the version of Xcode to use
+  cake: '0.33.0'                                            # the version of Cake to use
   apiTools: '1.3.4'                                         # the version of the api-tools CLI to use
   xharness: '1.0.0-prerelease.20602.1'
   tools: []                                                 # a list of any additional .NET Core tools needed
@@ -54,90 +39,60 @@ parameters:
   forceBuild: 'false'                                       # [manifest, directories] whether or not to force the build
   namesFilter: ''                                           # [manifest, directories] the names of the items to build
   targetsFilter: 'ci'                                       # [manifest, directories] the targets of the items to build
+  runCodeQL: 'false'
 
 jobs:
   - job: ${{ parameters.name }}
-    strategy:
-      matrix:
-        ${{ if ne(parameters.linuxImage, '') }}:
-          linux:
-            poolName: ${{ parameters.linuxAgentPoolName }}
-            imageName: ${{ parameters.linuxImage }}
-            runCodeQL: false
-        ${{ if ne(parameters.macosImage, '') }}:
-          macos:
-            poolName: ${{ parameters.macosAgentPoolName }}
-            imageName: ${{ parameters.macosImage }}
-            runCodeQL: false
-        ${{ if ne(parameters.windowsImage, '') }}:
-          windows:
-            poolName: ${{ parameters.windowsAgentPoolName }}
-            imageName: ${{ parameters.windowsImage }}
-            runCodeQL: true
     displayName: ${{ parameters.displayName }}
     timeoutInMinutes: ${{ parameters.timeoutInMinutes }}
     continueOnError: ${{ eq(parameters.continueOnError, 'true') }}
     dependsOn: ${{ parameters.dependsOn }}
     variables:
-      Codeql.Enabled: $(runCodeQL)
+      Codeql.Enabled: ${{ parameters.runCodeQL }}
     pool:
-      name: $(poolName)
-      vmImage: $(imageName)
+      vmImage: ${{ parameters.macosImage }}
     steps:
       - checkout: self
-        submodules: ${{ parameters.submodules }}
       # before the build starts, make sure the tooling is as expected
       - bash: sudo $AGENT_HOMEDIRECTORY/scripts/select-xamarin-sdk.sh ${{ parameters.mono }}
         displayName: 'Switch to the latest Xamarin SDK'
-        condition: eq(variables['System.JobName'], 'macos')
       - bash: echo '##vso[task.setvariable variable=MD_APPLE_SDK_ROOT;]'/Applications/Xcode_${{ parameters.xcode }}.app;sudo xcode-select --switch /Applications/Xcode_${{ parameters.xcode }}.app/Contents/Developer
         displayName: 'Switch to the latest Xcode'
-        condition: eq(variables['System.JobName'], 'macos')
       - ${{ if eq(parameters.installAppleCertificates, 'true') }}:
         - task: InstallAppleProvisioningProfile@1
-          condition: eq(variables['System.JobName'], 'macos')
           displayName: 'Install the iOS provisioning profile'
           inputs:
             provProfileSecureFile: 'Components iOS Provisioning.mobileprovision'
         - task: InstallAppleProvisioningProfile@1
-          condition: eq(variables['System.JobName'], 'macos')
           displayName: 'Install the macOS provisioning profile'
           inputs:
             provProfileSecureFile: 'Components Mac Provisioning.mobileprovision'
         - task: InstallAppleProvisioningProfile@1
-          condition: eq(variables['System.JobName'], 'macos')
           displayName: 'Install the tvOS provisioning profile'
           inputs:
             provProfileSecureFile: 'Components tvOS Provisioning.mobileprovision'
         - task: InstallAppleCertificate@2
-          condition: eq(variables['System.JobName'], 'macos')
           displayName: 'Install the iOS certificate'
           inputs:
             certSecureFile: 'Components iOS Certificate.p12'
         - task: InstallAppleCertificate@2
-          condition: eq(variables['System.JobName'], 'macos')
           displayName: 'Install the macOS certificate'
           inputs:
             certSecureFile: 'Components Mac Certificate.p12'
       - bash: echo '##vso[task.setvariable variable=PATH;]'$PATH:$HOME/.dotnet/tools
         displayName: 'Add ~/.dotnet/tools to the PATH environment variable'
-        condition: or(eq(variables['System.JobName'], 'macos'), eq(variables['System.JobName'], 'linux'))
+        # Cake v0.33.0 uses this version
       - task: UseDotNet@2
-        displayName: 'Switch to the correct version of the .NET Core SDK'
+        displayName: Install .NET 2.1.818
         inputs:
-          version: ${{ parameters.dotnetStable }}
-          performMultiLevelLookup: true
-          includePreviewVersions: true
-        condition: ne('${{ parameters.dotnetStable }}', '')
+          version: '2.1.818'
       - task: UseDotNet@2
-        displayName: 'Switch to the correct version of the .NET Core SDK'
+        displayName: Install .NET $(DotNetVersion)
         inputs:
-          version: ${{ parameters.dotnet }}
-          performMultiLevelLookup: true
-          includePreviewVersions: true
-        condition: ne('${{ parameters.dotnet }}', '')
-      # custom init steps
-      - ${{ parameters.initSteps }}
+          version: $(DotNetVersion)
+      - pwsh: |
+          dotnet workload install ios --verbosity diag --from-rollback-file https://maui.blob.core.windows.net/metadata/rollbacks/6.0.4xx.json --source $(Dotnet6Source) --source $(NuGetOrgSource)
+        displayName: Install .NET 6 iOS Workload
       - pwsh: |
           dotnet tool update -g api-tools --version ${{ parameters.apiTools }}
           dotnet tool update -g cake.tool --version ${{ parameters.cake }}
@@ -225,8 +180,7 @@ jobs:
 
           Write-Host "##vso[task.setvariable variable=GitLastSuccessfulCommit]$lastSuccessfulBuildCommit"
         displayName: 'Find the last successful commit'
-      # custom pre-build steps
-      - ${{ parameters.preBuildSteps }}
+
       # the basic build
       - ${{ if eq(parameters.buildType, 'basic') }}:
         - pwsh: |
@@ -326,8 +280,6 @@ jobs:
           testResultsFormat: VSTest
           testResultsFiles: 'output/**/*.trx'
           testRunTitle: 'VS Test results for $(System.JobName)'
-      # custom post-build steps
-      - ${{ parameters.postBuildSteps }}
       # post-build steps
       - pwsh: |
           dotnet cake validation.cake `
@@ -366,8 +318,6 @@ jobs:
         inputs:
           PathToPublish: output
           ArtifactName: output-$(System.JobName)${{ parameters.publishOutputSuffix }}
-      # custom post-api-diff steps
-      - ${{ parameters.postDiffBuildSteps }}
       # run any required checks
       - ${{ if eq(variables['System.TeamProject'], 'devdiv') }}:
         - task: ComponentGovernanceComponentDetection@0
